apps/haenu/musicbook-fe/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: musicbook-fe
  namespace: haenu
  labels:
    app: musicbook-fe
spec:
  replicas: 0
  selector:
    matchLabels:
      app: musicbook-fe
  template:
    metadata:
      labels:
        app: musicbook-fe
    spec:
      containers:
      - name: musicbook-fe
        image: hyeonwoo5342/musicbook-fe:13
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        # resources:
        #   limits:
        #     memory: '800Mi'
        #     cpu: '200m'
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 40
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 35
          periodSeconds: 10
      imagePullSecrets:
      - name: dockerhub-secret
---
# apiVersion: autoscaling/v2
# kind: HorizontalPodAutoscaler
# metadata:
#   name: musicbook-fe
#   namespace: haenu
# spec:
#   scaleTargetRef:
#     apiVersion: apps/v1
#     kind: Deployment
#     name: musicbook-fe
#   minReplicas: 2
#   maxReplicas: 10
#   metrics:
#   - type: Resource
#     resource:
#       name: cpu
#       target:
#         type: Utilization
#         averageUtilization: 70
