apps/haenu/musicbook-fe/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: musicbook-fe
  namespace: haenu
  labels:
    app: musicbook-fe
spec:
  type: ClusterIP
  ports:
    - port: 3000
  selector:
    app: musicbook-fe
